samples/_failures_safe/1761348818_27f3d4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_51e8d744.c: In function ‘main’:
./samples/SAFE/__tmp_51e8d744.c:159: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_51e8d744.c:158:17: error: expected declaration or statement at end of input
  158 |                 if
      |                 ^~
./samples/SAFE/__tmp_51e8d744.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_51e8d744.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_51e8d744.c:158:17: error: expected declaration or statement at end of input
